syntax = "proto3";

option csharp_namespace = "Napokon.Customers.API.Grpc";

service GrpcEntity {
  rpc GetEntityById (EntityRequest) returns (EntityReply);
}
message EntityRequest {
  int64 id = 1;
  string username = 2;
}

message EntityReply {
  int64 id = 1;
}